docs: completing javadoc; chore: cleaning classes & console messages